// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BillingDetailsSkeleton Match snapshot 1`] = `
<div>
  <div
    class="w-full flex flex-col md:flex-row items-center gap-4"
  >
    <div
      class="w-full h-60 md:min-w-96 rounded-lg bg-gray-200 dark:bg-gray-700 animate-pulse"
    />
    <div
      class="w-full h-60 rounded-lg bg-gray-200 dark:bg-gray-700 animate-pulse"
    />
    <div
      class="w-full h-60 rounded-lg bg-gray-200 dark:bg-gray-700 animate-pulse"
    />
  </div>
</div>
`;

exports[`BillingInfoSkeleton Match snapshot 1`] = `
<div>
  <div
    class="h-full"
  >
    <div
      class="mt-4 w-full h-40 rounded-lg bg-gray-200 dark:bg-gray-700 animate-pulse"
    />
    <div
      class="mt-4 w-full h-40 rounded-lg bg-gray-200 dark:bg-gray-700 animate-pulse"
    />
    <div
      class="mt-4 w-full h-40 rounded-lg bg-gray-200 dark:bg-gray-700 animate-pulse"
    />
  </div>
</div>
`;

exports[`InvoicesSkeleton Match snapshot 1`] = `
<div>
  <div
    class="w-full h-60 rounded-lg bg-gray-200 dark:bg-gray-700 animate-pulse"
  />
</div>
`;

exports[`TransactionsSkeleton Match snapshot 1`] = `
<div>
  <div
    class="w-full md:min-h-[640px] rounded-lg bg-gray-200 dark:bg-gray-700 animate-pulse"
  />
</div>
`;
